styles/main.css
*,
*:before,
*:after {
	box-sizing: border-box;
}

body {
	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
	color: #777777;
	line-height: 1.5em;
	background: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0) 0), #B6CDCD;
	background: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0) 0), #B6CDCD;
	background: linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0) 0), #B6CDCD;
	background-position: auto auto;
	-webkit-background-origin: padding-box;
	background-origin: padding-box;
	-webkit-background-clip: border-box;
	background-clip: border-box;
	-webkit-background-size: 50px 50px;
	background-size: 50px 50px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: 'Georgia', Times, Times New Roman, serif;
	color: #4EAAA4;
}

/*-- Forms --*/

form label,
form input,
form textarea {
	display: block;
}

form input[type="text"],
form input[type="email"],
form textarea {
	margin-bottom: 20px;
	border: 1px solid #E6E6E6;
	font-size: .85em;
	width: 100%;
	padding: .5em 1em;
	box-sizing: border-box;
	outline-style: solid;
	outline-color: rgba( 255, 255, 255, 0);
	outline-width: 2px;
	transition: all .15s cubic-bezier(.33, .66, .66, 1);
}

form textarea {
	height: 11.56rem;
}

form input[type="text"]:focus,
form input[type="email"]:focus,
form textarea:focus {
	outline-color: rgba(78, 170, 164, .75);
}

form input[type="submit"] {
	background: #4EAAA4;
	padding: 0.7rem 2rem;
	color: white;
	border: 0;
	cursor: pointer;
	transition: all .15s cubic-bezier(.33, .66, .66, 1);
	outline-style: solid;
	outline-color: rgba( 255, 255, 255, 0);
	outline-width: 2px;
	border: 1px solid white;
}

form input[type="submit"]:hover {
	background: rgb(57, 122, 118);
}

form input[type="submit"]:focus {
	outline-color: rgba(47, 99, 95, 0.75);
}

input::placeholder {
	color: #BFBFBE;
}

/* -- Layout -- */

.container {
	max-width: 960px;
	margin: 0 auto;
}

.content-container {
	margin: 20px;
}

@media only screen and (min-width: 700px) {
	.content-container {
		display: grid;
		grid-template-columns: 73% 25%;
		grid-column-gap: 2%;
		margin: 20px auto 110px auto;
	}
}

/*-- Header --*/

header {
	border-bottom: 3px solid #ccc;
	background-color: white;
}

header .container {
	display: flex;
	align-items: center;
}

header .branding {
	background-color: #4EAAA4;
	width: 240px;
	padding: 30px 20px;
	text-align: center;
}

header .branding h1 {
	margin: 0;
	color: white;
	line-height: .9em;
}

header nav {
	flex: 1;
	display: flex;
	justify-content: flex-end;
	padding: 20px;
}

header nav a {
	border-right: 1px solid #a6a6a6;
	display: block;
	padding: 0 10px;
}

header nav a:last-child {
	border-right: none;
}

header nav a:link,
header nav a:visited {
	color: #a6a6a6;
	text-decoration: none;
	transition: all .15s cubic-bezier(.33, .66, .66, 1);
}

header nav a:hover,
header nav a:active {
	color: rgb(0, 230, 214);
}

header nav a.active {
  color: rgb(0, 230, 214);
}

header nav a:focus {
	outline-color: #4EAAA4;
	outline-style: solid;
	outline-width: 2px;
}

img {
	max-width: 100%
}

@media only screen and (min-width: 700px) {
	header nav a {
		padding: 0 20px;
	}
}

/*-- Main --*/

main {
	background-color: white;
	padding: 20px;
	border: 1px solid #dddddd;
	border-radius: 3px;
	margin-bottom: 20px;
}

main h1,
aside h1 {
	border-bottom: 3px solid #dadada;
	padding-bottom: .75em;
}

main img {
	width: 100%;
}

main a {
	border-bottom: 3px solid #b4e7f8;
	box-shadow: inset 0 -5px 0 #b4e7f8;
	text-decoration: none;
	color: inherit;
	transition: background .15s cubic-bezier(.33, .66, .66, 1);
}

main a:hover {
	background: #b2e5dd;
}

@media only screen and (min-width: 700px) {
	main {
		margin-left: 20px;
	}
	main img {
		float: left;
		width: 33%;
		padding: 0 20px 20px 0;
	}
}

@media only screen and (min-width: 1000px) {
	main {
		margin-left: 0;
	}
}

/*-- Aside --*/

aside {
	margin-bottom: 20px;
}

.aside-inner {
	background-color: white;
	padding: 20px;
	border-radius: 3px;
	border: 1px solid #dddddd;
}

aside h1 {
	font-size: 1.35rem;
}

.contact-list {
	margin: 0;
	padding: 0;
	list-style: none;
	display: flex;
}

.contact-list li {
	flex: 1;
	text-align: center;
}

.contact-list li a {
	display: block;
	border: 2px solid rgba(0,0,0,0);
	transition: all .15s cubic-bezier(.33,.66,.66,1);
}

.contact-list li a:focus {
	display: block;
	border: 2px solid #4EAAA4;
	outline: none;
}

.contact-list .github {
	color: black;
}

.contact-list .linkedin {
	color: #0279B3;
}

.contact-list .stack {
	color: #FDA428;
}

.contact-list li a {
	font-size: 40px;
}

.contact-list a:hover {
	color: rgb(0, 230, 214);
	transition: all .15s cubic-bezier(.33, .66, .66, 1);
}

@media only screen and (min-width: 700px) {
	aside {
		margin-right: 20px;
	}
}

@media only screen and (min-width: 1000px) {
	aside {
		margin-right: 0;
	}
}

/*-- Footer --*/

footer {
	background: #666666;
	border-top: 5px solid #4EAAA4;
	text-align: center;
}

footer .legal {
	padding: 2rem;
	color: rgba( 255, 255, 255, .5);
	font-size: .75em;
	margin: 0;
}

@media only screen and (min-width: 700px) {
	footer {
		position: fixed;
		bottom: 0;
		width: 100%;
	}
}

/*-- Portfolio Grid --*/

.portfolio-grid {
	display: flex;
	flex-flow: row wrap;
	align-items: flex-start;
}

.portfolio-link {
	flex: 1 100%;
	position: relative;
	margin-bottom: 20px;
}

.portfolio-link:nth-last-child(1) {
	margin-bottom: 0;
}

.portfolio-grid img {
	padding: 0;
}

.portfolio-link a {
	font-family: 'Georgia', Times, Times New Roman, serif;
	color: white;
	outline: none;
  padding: 0.8em 1.25em;
	font-size: 1.35em;
  box-shadow: none;
	border-bottom: none;
	display: block;
  position: absolute;
  bottom: 2rem;
  left: 0;
  right: 0;
  background: rgba(78, 170, 164, 0.85);
}

.portfolio-link a:hover {
	background: rgba(78, 170, 164, 1);
}

@media only screen and (min-width: 550px) {
	.portfolio-link {
		flex: 0 0 50%;
		margin-bottom: 40px;
	}
	/* removing margin from two last items should work even if we add more later */
	.portfolio-link:nth-last-child(1),
	.portfolio-link:nth-last-child(2) {
		margin-bottom: 0;
	}
	/*-- I decided to make the gutter and the row spacing the same. Hope that's okay. --*/
	.portfolio-link:nth-child(even) {
		padding-left: 20px;
	}
	.portfolio-link:nth-child(odd) {
		padding-right: 20px;
	}
	.portfolio-link:nth-child(even) a  {
		left: 20px;
	}
	.portfolio-link:nth-child(odd) a  {
		right: 20px;
	}
}

@media only screen and (min-width: 700px) {
	.portfolio-grid img {
		float: none;
		width: 100%;
		padding: 0;
	}
	.portfolio-link a .fa-arrow-right {
		position: relative;
		opacity: 0;
		left: 20px;
	}
	.portfolio-link a:hover .fa-arrow-right {
		animation-name: moveright;
    animation-duration: .5s;
		animation-iteration-count: 1;
		animation-fill-mode: forwards;
	}
	@keyframes moveright {
    0%   {opacity:0; left: 0px;}
    100% {opacity:1; left: 20px;}
	}
}

